--- a/web.config
+++ b/web.config
@@ -14,6 +14,7 @@
       <files>
         <clear/>
         <add value="index.php"/>
+        <add value="info.php"/>
       </files>
     </defaultDocument>
     <fastCgi>
